set bean to ViewScoped, get request parameters from ExternalContext